--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@ canvas{border:1px solid red}
 </style>
 </head>
 <body>
-  <pre></pre>
-  <video src="rikd.mp4" controls autoplay loop ></video>
+  <h1>Get customized mobile covers</h1>
+  <video src="https://github.com/kaab1r/online2offline/blob/gh-pages/rikd.mp4?raw=true" controls autoplay loop></video>
   <canvas></canvas> <canvas></canvas>
   <script>
   const vi=document.querySelector("video");
 vi.addEventListener("canplay",function() {
   const qs=el=>document.querySelector(el);
   const qsa=el=>document.querySelectorAll(el);
-  const im=qs('img'), canvas=qsa('canvas'), pr=qs('pre');
+  const im=qs('img'), canvas=qsa('canvas');
   const cv=canvas[0];
   const vi=qs('video');
   const g=cv.getContext('2d');
@@ -112,7 +112,6 @@ vi.addEventListener("canplay",function() {
       vd3.data[i+1]^=255/sin3.val;
       vd3.data[i+2]^=255/sin3.val;
     }
-    console.log(sin.val,sin2.val,sin3.val);
     g2.drawImage(vi,0,0,W,H);
     g2.putImageData(vd,v.x,v.y);
     g2.putImageData(vd2,v2.x,v2.y);
