--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Only 8 Colors</title>
   <style>
-body{background:#111;color:#888}
-canvas{border:1px solid red}
+body{}
+canvas{width:350px;height:350px;}
 
 </style>
 </head>
 <body>
   <h1>Get customized mobile covers</h1>
   <video src="https://github.com/kaab1r/online2offline/blob/gh-pages/rikd.mp4?raw=true" controls autoplay loop></video>
-  <canvas></canvas> <canvas></canvas>
+  <canvas style="display:none;"></canvas> <canvas></canvas>
   <script>
   const vi=document.querySelector("video");
 vi.addEventListener("canplay",function() {
