--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Only 8 Colors</title>
+  <title>Custom Printed Mobile Back Cover and Cases Online @Rs. 99</title>
   <style>
 body{}
 canvas{width:350px;height:350px;}
@@ -11,9 +11,9 @@ canvas{width:350px;height:350px;}
 </style>
 </head>
 <body>
-  <h1>Get customized mobile covers</h1>
+  <h1>Get Custom Printed Mobile Back Cover and Cases Online @Rs. 99</h1>
   <video src="https://github.com/kaab1r/online2offline/blob/gh-pages/rikd.mp4?raw=true" controls autoplay loop></video>
-  <canvas style="display:none;"></canvas> <canvas></canvas>
+  <!-- <canvas style="display:none;"></canvas> <canvas></canvas>
   <script>
   const vi=document.querySelector("video");
 vi.addEventListener("canplay",function() {
@@ -138,6 +138,6 @@ vi.addEventListener("canplay",function() {
 
 
 
-  </script>
+  </script>-->
 </body>
 </html>
