--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@ canvas{width:350px;height:350px;}
 </head>
 <body>
   <h1>Get Custom Printed Mobile Back Cover and Cases Online @Rs. 99</h1>
-  <video src="https://github.com/kaab1r/online2offline/blob/gh-pages/rikd.mp4?raw=true" controls autoplay loop></video>
+  <img src="https://github.com/kaab1r/online2offline/blob/gh-pages/banner.jpg?raw=true" style="width:100%;"/>
+  <video src="https://github.com/kaab1r/online2offline/blob/gh-pages/itsml.mp4?raw=true" controls autoplay loop></video>
   <!-- <canvas style="display:none;"></canvas> <canvas></canvas>
   <script>
   const vi=document.querySelector("video");
